--- a/public/login/css/main.css
+++ b/public/login/css/main.css
@@ -135,14 +135,21 @@ iframe {
 [ Utility ]*/
 .txt1 {
   font-family: Poppins-Regular;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 1.5;
   color: #999999;
 }
 
 .txt2 {
   font-family: Poppins-Regular;
-  font-size: 13px;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #666666;
+}
+
+.txt3 {
+  font-family: Poppins-Regular;
+  font-size: 14px;
   line-height: 1.5;
   color: #666666;
 }
@@ -188,13 +195,14 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 177px 130px 33px 95px;
+  padding: 50px 130px 33px 95px;
 }
 
 /*------------------------------------------------------------------
 [  ]*/
 .login100-pic {
   width: 316px;
+  padding-top: 90px;
 }
 
 .login100-pic img {
@@ -217,7 +225,7 @@ iframe {
 
   width: 100%;
   display: block;
-  padding-bottom: 54px;
+  padding-bottom: 25px;
 }
 
 
